--- a/src/css/style.css
+++ b/src/css/style.css
@@ -27,8 +27,6 @@ body{
 }
 .menu li{
     list-style: none;
-    
-    
 }
 .menu a {
     color: aliceblue;
@@ -43,6 +41,22 @@ body{
     color: black;
     transition: ease-in .3s;
 }
+.socials{
+    display: flex;
+    width: 50%;
+    justify-content: space-around;
+}
+.socials li{
+    list-style: none;
+    padding: 1em;
+}
+.socials a{
+    color: rgb(141, 243, 137);
+    text-decoration: none;
+}
+.socials i{
+    font-size: 1.5em;
+}
 .main{
     margin: 0 auto;
     width: 80vw;
@@ -53,6 +67,10 @@ body{
 }
 h1{
     font-size: 3em;
+    margin-bottom: 10px;
+}
+.main p {
+    font-size: 1.1em;
 }
 .download-cv{
     padding: 10px 20px;
@@ -72,25 +90,7 @@ h1{
     border: 3px solid #3ea056;
     height: 430px;
 }
-.about{
-    display: grid;
-    grid-template-columns: repeat(10,1fr);
-    width: 100vw;
-    align-items: center;
-    color: black;
-}
-.about img{
-    width: 100%;
-    grid-column: 1/5;
-}
-.about-info{
-    grid-column: 5/10;
-    padding: 3em;
-}
-.about-info h2{ 
-    font-size: 2em;
-    color: #18291f;
-}
+
 .divider{
     height: 4px;
     width: 60px;
@@ -101,3 +101,56 @@ h1{
  .about p{
      margin-bottom: 1em;
  }
+
+.portfolio{
+    width: 80vw;
+    color: black;
+ }
+.portfolio-headers{
+    width: 100vw;
+    padding: 5em;
+}
+.portfolio-headers h2 {
+    font-size: 5em;
+}
+.portfolio .container{
+    width: 80vw;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+}
+.card {
+    width: 300px;
+    margin: 1em;
+    background-color: #3ea056;
+}
+.card-img{
+    display: flex;
+    justify-content: space-evenly;  
+}
+.card-img i {
+    font-size: 3em;
+}
+.card-title{
+    padding: 10px; 
+}
+.card-title h2{
+    font-size: 1.2em;
+    text-transform: uppercase;
+}
+.card-title p {
+    margin-top: 0.2em;
+    text-align: justify;
+}
+.card-link{
+    display: flex;
+    justify-content: space-evenly;
+    margin-bottom: 5px;
+}
+.card-link a{
+    color: black;
+    text-decoration: none;
+}
+.card-link i{
+    font-size: 1.5em;
+}
